# slarti-rust

./: Cargo.toml
config/: settings.json
src/: camera.rs  events.rs  main.rs  player_controller.rs
src/config/: game_config.rs  game_config_test.rs  mod.rs
src/config/testfiles/: bad.json  settings.json
src/input/: input_events.rs  input_events_test.rs  input_map.rs  input_map_test.rs  mod.rs
