[package]

name = "slarti-rust"
version = "0.0.1"
authors = ["Jason Roelofs <jasongroelofs@gmail.com>"]

[[bin]]

name = "cube"
path = "src/main.rs"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.nalgebra]

git = "https://github.com/sebcrozet/nalgebra"
